Stopped nav from hiding on smaller screens
Still needs lots of work to make it work properly

--- a/css/nav.css
+++ b/css/nav.css
@@ -2,32 +2,48 @@ nav {
 	position: fixed;
 	top: 0;
     width: 100%;
-    height: 50px;
+    min-height: 50px;
     /* text-align: right; */
     background: #2c2c2c;
 	/* background: #5b9e19; */
     color: #fff;
     box-shadow: 0px 0px 5px #000;
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+	flex-wrap: wrap;
 }
 
 nav ul {
     display: flex;
     justify-content: flex-end;
     align-items: center;
+	list-style: none;
+	flex-wrap: wrap;
 }
 
-nav ul.class-list {
+/* nav ul.class-list {
     list-style: none;
     padding-top: 1em;
-}
+} */
 
 nav ul.class-list li {
-    display: inline;
+    display: flex;
+	align-items: center;
     margin-right: 1.2em;
     font-size: 18px;
 }
 
+nav ul.class-list li a {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
 nav ul li .active-page {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	color: #5b9e19;
 	/* font-size: 1.3em; */
 	text-shadow: 0 1px 10px #000;
